@@ -36,26 +36,27 @@ public final class SerializerHookConstants {
     public static final int LIN_TREND_ACC = -306;
     public static final int LONG_LONG_ACC = -307;
     public static final int LONG_DOUBLE_ACC = -308;
-    public static final int TUPLE2 = -309;
-    public static final int TUPLE3 = -310;
-    public static final int TUPLE4 = -311;
-    public static final int TUPLE5 = -312;
-    public static final int TAG = -313;
-    public static final int ITEMS_BY_TAG = -314;
-    public static final int WATERMARK = -315;
-    public static final int SNAPSHOT_BARRIER = -316;
-    public static final int DONE_ITEM = -317;
-    public static final int BROADCAST_ENTRY = -318;
-    public static final int BROADCAST_KEY = -319;
-    public static final int WINDOW_RESULT = -320;
-    public static final int KEYED_WINDOW_RESULT = -321;
-    public static final int HASH_MAP = -322;
-    public static final int HASH_SET = -323;
-    public static final int JET_EVENT = -324;
-    public static final int TIMESTAMPED_ITEM = -325;
-    public static final int QUERY_ENTRY = -326;
-    public static final int DEFERRED_MAP = -327;
-    public static final int AVRO_UTF8 = -328;
+    public static final int PICK_ANY_ACC = -309;
+    public static final int TUPLE2 = -310;
+    public static final int TUPLE3 = -311;
+    public static final int TUPLE4 = -312;
+    public static final int TUPLE5 = -313;
+    public static final int TAG = -314;
+    public static final int ITEMS_BY_TAG = -315;
+    public static final int WATERMARK = -316;
+    public static final int SNAPSHOT_BARRIER = -317;
+    public static final int DONE_ITEM = -318;
+    public static final int BROADCAST_ENTRY = -319;
+    public static final int BROADCAST_KEY = -320;
+    public static final int WINDOW_RESULT = -321;
+    public static final int KEYED_WINDOW_RESULT = -322;
+    public static final int HASH_MAP = -323;
+    public static final int HASH_SET = -324;
+    public static final int JET_EVENT = -325;
+    public static final int TIMESTAMPED_ITEM = -326;
+    public static final int QUERY_ENTRY = -327;
+    public static final int DEFERRED_MAP = -328;
+    public static final int AVRO_UTF8 = -329;
 
     public static final int CDC_RECORD = -340;
     public static final int CDC_RECORD_PART = -341;
